# aws-challenge

./: amazon_rekognition.py  out.json  pyproject.toml  readme.md
